# swe-worker

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  engineer_loop.py  git_ops.py  github_client.py  startup_validation.py  state_store.py  work_paths.py  worker_server.py
app/api/: worker_server.py
app/core/: __init__.py  config.py  startup_validation.py
app/domain/: engineer_loop.py
app/integrations/: __init__.py
app/integrations/git/: __init__.py  git_ops.py
app/integrations/github/: __init__.py  github_client.py
app/integrations/process/: __init__.py  subprocess_utils.py
app/providers/: base.py  noop.py  openhands.py
app/rendering/: __init__.py  pr_template.py
app/rendering/templates/: pr_body.md
app/runtime/: __init__.py  state_store.py  work_paths.py
app/templates/: pr_body.md
tests/: test_config.py  test_engineer_loop.py  test_openhands_provider.py  test_pr_template.py  test_state_store.py  test_worker_server.py
