[project]
name = "swe-worker"
version = "0.1.0"
description = "Issue-scoped resident Engineer Bot worker (OpenHands provider)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.32.1",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "httpx>=0.28.1",
  "jinja2>=3.1.5",
  "openhands==1.6.0",
]

[dependency-groups]
dev = [
  "gh>=0.0.4",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D"]

[tool.ruff.format]
quote-style = "double"


